# ecfw

./: .gitignore  .gitmodules  .syntastic_c_config  CMakeLists.txt  LICENSE  Makefile  README.md  atmelice.cfg  build  build-rust-libcore.sh  debug  gdbinit  gen-rust-dependencies.sh  jlink.cfg  main.c  program  rustfmt.toml  test.rs  unfuck-asf.py
CMakeModules/: toolchain-gnu-arm-none-eabi-sam4s16c.cmake
cm4-support/: flash.ld
cm4-support/Include/: core_cmFunc.h
config/: FreeRTOSConfig.h  conf_board.h  conf_clock.h  conf_sd_mmc.h  conf_sleepmgr.h  conf_usart.h  conf_usb.h  esh_config.h
ctypes/: lib.rs
ecfw_rust/: lib.rs  messages.rs
ecfw_rust/data/: base64.rs  hexprint.rs  mod.rs  parseint.rs  stringbuilder.rs  utf.rs
ecfw_rust/devices/: i2c.rs  misc.rs  mod.rs  pins.rs  supplies.rs  twi.rs
ecfw_rust/drivers/: blockdev.rs  clocksynth.rs  com.rs  com_cdc.rs  com_usart.rs  ext4.rs  fpga.rs  ftrans.rs  gpio.rs  gpt.rs  i2c.rs  ledmatrix.rs  mod.rs  northbridge.rs  power.rs  sd.rs  sdram.rs  spi.rs  tempsensor.rs  twi.rs
ecfw_rust/hardware/: blockdev.rs  gpio.rs  ledmatrix.rs  mod.rs  sd.rs  tempsensor.rs  twi.rs
ecfw_rust/main/: commands.rs  debug.rs  gpt.rs  hexprint.rs  main.rs  messages.rs  mod.rs  parseint.rs  pins.rs  power.rs  reset.rs  supplies.rs  sysman.rs  twi_devices.rs
ecfw_rust/os/: freertos.rs  mod.rs  mutex.rs  queue.rs  rwlock.rs  stralloc.rs
ecfw_rust/rustsys/: alloc_system.rs  debug.rs  ec_io.rs  freertos.rs  mod.rs  mutex.rs  panicking.rs  print_macs.rs  queue.rs  rust_support.rs  rwlock.rs  smutex.rs
freertos-port/: README
hardware/: gpio.rs  ledmatrix.rs  mcu.c  mcu.h  twi.rs  usart.c  usart.h
main/: commands.rs  leds.rs  main.rs  parseint.rs  pins.rs  power.rs  rust_support.rs  supplies.rs
plugins/: repeat.rs
rustsys/: alloc_system.rs  ctypes.rs  ec_io.rs  freertos.rs  gpio.rs  panicking.rs  rust_support.rs  smutex.rs  twi.rs
scripts/: build-rust-lib.sh  build-rust-libcore.sh  control  debug  debug-dash  gen-rust-dependencies.sh  jlink-script.jlink  program  range.py  reset  size.py  unfuck-asf.py
